[gd_scene load_steps=3 format=2]

[ext_resource path="res://rescourses/casing.png" type="Texture" id=1]
[ext_resource path="res://Blood.gd" type="Script" id=2]

[node name="Blood" type="Node2D"]
z_index = -1
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
amount = 32
lifetime = 0.3
speed_scale = 1.5
explosiveness = 1.0
texture = ExtResource( 1 )
direction = Vector2( -1, 0 )
spread = 25.0
initial_velocity = 314.13
initial_velocity_random = 1.0
damping = 43.12
damping_random = 1.0
scale_amount = 4.49
scale_amount_random = 1.0
color = Color( 0.678431, 0.054902, 0.054902, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.18
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
